last updated added

--- a/Styles/Client/favorite.css
+++ b/Styles/Client/favorite.css
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favorite</title>
-    <link rel="stylesheet" href="../styles/client/favorite.css">
-</head>
-<body>
-    <h1>Favorite Page</h1>
-    <script src="../scripts/client/favorite.js"></script>
-</body>
-</html>
+@import url("/Global/global.css");
+@import url("../Responsive/Client/favorite-responsive.css");
