--- a/Styles/Client/landing-page.css
+++ b/Styles/Client/landing-page.css
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing-page</title>
-    <link rel="stylesheet" href="../styles/client/landing-page.css">
-</head>
-<body>
-    <h1>Landing-page Page</h1>
-    <script src="../scripts/client/landing-page.js"></script>
-</body>
-</html>
+@import url("/Global/global.css");
+@import url("../Responsive/Client/landing-page-responsive.css");
