--- a/Styles/Admin/categories.css
+++ b/Styles/Admin/categories.css
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categories</title>
-    <link rel="stylesheet" href="../styles/admin/categories.css">
-</head>
-<body>
-    <h1>Categories Page</h1>
-    <script src="../scripts/admin/categories.js"></script>
-</body>
-</html>
+@import url("/Global/global.css");
+@import url("../Responsive/Admin/categories-responsive.css");
