--- a/Styles/Admin/users.css
+++ b/Styles/Admin/users.css
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users</title>
-    <link rel="stylesheet" href="../styles/admin/users.css">
-</head>
-<body>
-    <h1>Users Page</h1>
-    <script src="../scripts/admin/users.js"></script>
-</body>
-</html>
+@import url("/Global/global.css");
+@import url("../Responsive/Admin/users-responsive.css");
