--- a/Styles/Client/404.css
+++ b/Styles/Client/404.css
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-    <link rel="stylesheet" href="../styles/client/404.css">
-</head>
-<body>
-    <h1>404 Page</h1>
-    <script src="../scripts/client/404.js"></script>
-</body>
-</html>
+@import url("/Global/global.css");
+@import url("../Responsive/Client/404-responsive.css");
