--- a/Styles/Client/register.css
+++ b/Styles/Client/register.css
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="../styles/client/register.css">
-</head>
-<body>
-    <h1>Register Page</h1>
-    <script src="../scripts/client/register.js"></script>
-</body>
-</html>
+@import url("/Global/global.css");
+@import url("../Responsive/Client/register-responsive.css");
