--- a/Styles/Admin/dashboard.css
+++ b/Styles/Admin/dashboard.css
@@ -1,2 +1,286 @@
 @import url("/Global/global.css");
+@import url("/Global/reset.css");
+@import url("/Global/fonts.css");
+@import url("/Global/variable.css");
 @import url("../Responsive/Admin/dashboard-responsive.css");
+
+body {
+  display: flex;
+}
+.left {
+  width: 250px;
+  height: 100vh;
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.logo-div {
+  display: flex;
+  align-items: center;
+  padding: 34px 50px 48px 34px;
+}
+
+.logo-icon {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.logo-left {
+  font-size: 18px;
+  color: #fff;
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+.menu-dashboard {
+  margin-bottom: 20px;
+  background-color: var(--Btn-color);
+}
+
+.menu-item {
+  display: flex;
+  align-items: center;
+  padding: 15px 20px 15px 47px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  color: #cfcfcf;
+}
+
+.hover1:hover {
+  background-color: var(--BG-color_7);
+  color: #fff;
+}
+.hover2:hover {
+  background-color: var(--Cards-bg-color);
+  color: #fff;
+}
+.hover3:hover {
+  color: var(--Cards-bg-color);
+}
+
+.menu-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.menu-text {
+  font-family: var(--Font_Raleway);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 13px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--SideBar-text-color);
+}
+
+.dashboard {
+  color: #ffffff;
+}
+
+.logout-div {
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  margin-left: 48px;
+  margin-bottom: 44px;
+  cursor: pointer;
+  border-color: red;
+}
+
+.logout-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.logout-left {
+  font-size: 14px;
+  color: var(--Btn-color);
+}
+
+/* test */
+.right {
+  width: 100%;
+  background-color: var(--Modal-color);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  padding: 36px 116px 0px 24px;
+}
+
+.header h1 {
+  font-family: var(--Font_Raleway);
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 15.26px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--Text-color_1);
+}
+
+.header p {
+  font-family: var(--Font_Raleway);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.48px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #ffffff;
+}
+
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  gap: 34px;
+  padding: 80px 78px 0px 24px;
+}
+
+.card-div {
+  display: flex;
+  gap: 30px;
+}
+
+.card-p1 {
+  font-family: var(--Font_Raleway);
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 17.61px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--Text-color_2);
+  margin-bottom: 8px;
+}
+
+.card-p2 {
+  font-family: var(--Font_Inter);
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 36.31px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #ffffff;
+}
+
+.card1 {
+  padding: 24px;
+  width: 288px;
+  height: 203px;
+  top: 153px;
+  left: 280px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  background-color: var(--BG-color_7);
+}
+
+.card2 {
+  padding: 24px;
+  width: 234px;
+  height: 203px;
+  top: 153px;
+  left: 598px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  margin-right: 3px;
+  background-color: var(--BG-color_7);
+}
+
+.card3 {
+  padding: 24px;
+  width: 234px;
+  height: 203px;
+  top: 153px;
+  left: 865px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  background-color: var(--BG-color_7);
+}
+
+.card4 {
+  padding: 24px;
+  width: 234px;
+  height: 203px;
+  top: 153px;
+  left: 1129px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  background-color: var(--BG-color_7);
+}
+
+.card5 {
+  padding: 24px;
+  width: 288px;
+  height: 203px;
+  top: 390px;
+  left: 280px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  background-color: var(--BG-color_7);
+}
+
+.card6 {
+  padding: 24px;
+  width: 234px;
+  height: 203px;
+  top: 390px;
+  left: 598px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  background-color: var(--BG-color_7);
+}
+
+.card7 {
+  padding: 24px;
+  width: 234px;
+  height: 203px;
+  top: 390px;
+  left: 865px;
+  gap: 0px;
+  border-radius: 30px;
+  opacity: 0px;
+  background-color: var(--BG-color_7);
+}
+
+.profile-name {
+  font-family: var(--Font_Raleway);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 13px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--Text-color_3);
+}
+
+.card-hover:hover {
+  background: var(--Cards-bg-color);
+  transition: 0.5s;
+}
