started client login

--- a/Global/global.css
+++ b/Global/global.css
@@ -1,3 +1,4 @@
+@import url("/Global/bootstrap.css");
 @import url("/Global/reset.css");
 @import url("/Global/font.css");
 @import url("/Global/variables.css");
