--- a/Styles/Client/login.css
+++ b/Styles/Client/login.css
@@ -1,2 +1,40 @@
 @import url("/Global/global.css");
 @import url("../Responsive/Client/login-responsive.css");
+
+.client-login {
+  display: flex;
+  margin-left: 20px;
+  margin-top: 8px;
+  padding-top: 40px;
+  width: 56px;
+  background-color: var(--SideBar-color);
+  /* border: 1px solid black; */
+  backdrop-filter: blur(24px);
+  box-shadow: 0px 40px 40px 8px #00000029;
+}
+
+.main-logo {
+  width: 56px;
+  height: 56px;
+}
+
+.side-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 1000px;
+  gap: 64px;
+}
+
+.logo_links {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+  padding: 0 12px;
+}
+
+.logos {
+    filter: brightness(1.8); 
+}
+
+
