--- a/Styles/Admin/login.css
+++ b/Styles/Admin/login.css
@@ -2,6 +2,7 @@
 @import url("/Global/reset.css");
 @import url("/Global/fonts.css");
 @import url("/Global/variable.css");
+@import url("/Global/bootstrap.css");
 @import url("../Responsive/Admin/login-responsive.css");
 
 body {
