--- a/Styles/Admin/movies.css
+++ b/Styles/Admin/movies.css
@@ -270,3 +270,126 @@ th:nth-child(5) {
   background-color: var(--Cards-bg-color);
   transition: background-color 0.3s;
 }
+
+/* modal */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: #171616;
+  padding: 20px;
+  border-radius: 10px;
+  width: 70%;
+  max-width: 900px;
+  height: 720px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.content-wrapper {
+  display: flex;
+  width: 100%;
+  gap: 20px;
+}
+
+.image-wrapper {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.image-wrapper img {
+  max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
+  margin-left: 84px;
+}
+
+.form-wrapper {
+  width: 60%;
+  margin-top: 10px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+input,
+textarea,
+select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #475069;
+  border-radius: 5px;
+  background: #0000001a;
+  color: #475069;
+}
+input::placeholder,
+textarea::placeholder {
+  color: #475069;
+}
+
+textarea {
+  height: 100px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #475069;
+  border-radius: 5px;
+  color: #475069;
+  resize: none;
+}
+
+.horizontal-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.checkbox-group {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.submit-btn {
+  background-color: #9b51e0;
+  color: #ffffff;
+  border: none;
+  width: 92px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+  background-color: #3700b3;
+}
+
+.adult {
+  color: #475069;
+  margin-right: 18px;
+}
+
+select.error {
+  border-color: red;
+}
+
+input.error::placeholder,
+textarea.error::placeholder {
+  color: red;
+}
