--- a/Global/global.css
+++ b/Global/global.css
@@ -1,4 +1,5 @@
-@import url("/Global/bootstrap.css");
+
 @import url("/Global/reset.css");
 @import url("/Global/font.css");
-@import url("/Global/variables.css");
+@import url("/Global/variable.css");
+@import url("/Global/bootstrap.css");
