admin-user finish (html,css)

--- a/Global/global.css
+++ b/Global/global.css
@@ -1,5 +1,3 @@
-
 @import url("/Global/reset.css");
 @import url("/Global/font.css");
-@import url("/Global/variable.css");
-@import url("/Global/bootstrap.css");
+@import url("/Global/variables.css");
