--- a/Global/font.css
+++ b/Global/font.css
@@ -1,9 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Numans&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 :root {
   /* fonts; */
-
-  --Font_Numans: "Numans", serif;
+  --Font_Numans: "Numans", sans-serif;
   --Font_Poppins: "Poppins", sans-serif;
   --Font_Raleway: "Raleway", sans-serif;
   --Font_Inter: "Inter", sans-serif;
