--- a/Styles/Admin/movies.css
+++ b/Styles/Admin/movies.css
@@ -8,6 +8,7 @@
 body {
   display: flex;
 }
+
 .left {
   width: 250px;
   height: 100vh;
@@ -173,77 +174,83 @@ body {
 table {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
+  margin: 0px auto;
   background-color: #ffffff;
   color: #000000;
   border-radius: 10px;
-}
-
-.th-border {
-  border-radius: 8px 0px 0px 0px;
-}
-.th-border2 {
-  border-radius: 0px 8px 0px 0px;
+  text-align: center;
 }
 
 th,
 td {
-  width: 48px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
-}
-
-th {
-  padding: 16px;
-  background-color: var(--TEXT-color_5);
-  color: #ffffff;
-}
-
-td img {
-  width: 30px;
-  height: 50px;
-  display: block;
-  margin: 0 auto;
+  vertical-align: middle;
+  padding: 4px;
 }
 
 td:first-child {
-  align-content: center;
   text-align: center;
-  width: 54px;
+  width: 64px;
 }
 
 td,
 th:nth-child(2) {
-  align-content: center;
   text-align: center;
-  width: 200px;
+  width: 50px;
 }
 
 td,
 th:nth-child(3) {
-  align-content: center;
   text-align: center;
-  width: 426px;
+  width: 120px;
 }
-
 td,
 th:nth-child(4) {
-  align-content: center;
   text-align: center;
-  width: 260px;
+  width: 570px;
 }
-
 td,
 th:nth-child(5) {
-  align-content: center;
   text-align: center;
-  width: 148px;
+  width: 230px;
+}
+td,
+th:nth-child(6) {
+  padding-left: 15px;
+  width: 100px;
+}
+
+.img-icon1 {
+  margin-left: 10px;
+}
+th {
+  background-color: var(--TEXT-color_5);
+  color: #ffffff;
+}
+
+.movie-title {
+  display: block;
+  margin: 0 auto;
+  max-width: 50px;
+  height: auto;
+}
+
+.img-icon {
+  display: inline-block;
+  vertical-align: middle; /* Iconları metinle hizalar */
+  width: 18px; /* Icon boyutu */
+  height: 18px; /* Icon boyutu */
+  cursor: pointer;
 }
 
 .movie-title {
   display: flex;
-  align-items: end;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
-  width: 70%;
 }
 
 .button {
@@ -263,8 +270,6 @@ th:nth-child(5) {
   font-weight: 500;
   line-height: 16.41px;
   text-align: center;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
 }
 
 .button:hover {
@@ -393,4 +398,72 @@ select.error {
 input.error::placeholder,
 textarea.error::placeholder {
   color: red;
+}
+
+/* modal */
+.modal-content-2 {
+  background-color: #171616;
+  padding: 30px;
+  border-radius: 12px;
+  width: 400px;
+  max-width: 90%;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Modal Mesaj */
+.comment-wrapper2 {
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 1.5;
+}
+
+/* Modal Butonlar */
+.modal-buttons {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.modal-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#yes-btn {
+  background-color: #9b51e0;
+  color: #fff;
+}
+
+#yes-btn:hover {
+  background-color: #7a3bb5;
+}
+
+#no-btn {
+  background-color: #7a7a7a;
+  color: #fff;
+}
+
+#no-btn:hover {
+  background-color: #5a5a5a;
+}
+
+/* Modal */
+.modal-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
 }
