--- a/Styles/Admin/categories.css
+++ b/Styles/Admin/categories.css
@@ -363,3 +363,71 @@ input[type="text"].error {
 .submit-btn {
   transition: background-color 0.3s ease;
 }
+
+/* modal */
+.modal-content-2 {
+  background-color: #171616;
+  padding: 30px;
+  border-radius: 12px;
+  width: 400px;
+  max-width: 90%;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Modal Mesaj */
+.comment-wrapper2 {
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 1.5;
+}
+
+/* Modal Butonlar */
+.modal-buttons {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.modal-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#yes-btn {
+  background-color: #9b51e0;
+  color: #fff;
+}
+
+#yes-btn:hover {
+  background-color: #7a3bb5;
+}
+
+#no-btn {
+  background-color: #7a7a7a;
+  color: #fff;
+}
+
+#no-btn:hover {
+  background-color: #5a5a5a;
+}
+
+/* Modal */
+.modal-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+}
