--- a/Global/global.css
+++ b/Global/global.css
@@ -1,5 +1,5 @@
 
-@import url("/Global/reset.css");
-@import url("/Global/font.css");
-@import url("/Global/variable.css");
-@import url("/Global/bootstrap.css");
+@import url("./reset.css");
+@import url("./font.css");
+@import url("./variable.css");
+@import url("./bootstrap.css");
