--- a/Styles/Client/landing-page.css
+++ b/Styles/Client/landing-page.css
@@ -25,7 +25,7 @@ a {
   justify-content: space-between;
   padding: 24px 168px;
   background-color: rgba(0, 0, 0, 0);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -124,7 +124,8 @@ form {
   gap: 8px;
 }
 
-input {
+input,
+textarea {
   width: 368px;
   height: 55px;
   border-radius: 4px;
@@ -140,6 +141,12 @@ input::placeholder {
   padding: 16px;
 }
 
+input:focus {
+  background-color: rgba(0, 0, 0, 0.3); 
+  color: #fff; 
+  outline: none; 
+}
+
 .started-btn {
   background-color: var(--Btn-color);
   font-family: var(--Font_Roboto);
@@ -149,13 +156,219 @@ input::placeholder {
   text-align: center;
   padding: 14px 24px;
   border-radius: 4px;
+  border: none;
+  color: #fff;
 }
 
 .enjoy-section {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  padding: 72px 168px;
-  gap: 20px;
+  margin: 0 auto;
+  /* gap: 12px; */
   border-bottom: 8px solid #232323;
 }
+
+h3 {
+  font-family: var(--Font_Roboto);
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 62px;
+  padding-bottom: 16px;
+}
+
+.enjoy-right {
+  width: 546px;
+}
+
+.enjoy-text {
+  font-family: var(--Font_Roboto);
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.stream-part {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 12px;
+  margin: 72px 110px;
+}
+
+h4 {
+  font-family: var(--Font_Roboto);
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 62px;
+  padding-bottom: 16px;
+}
+
+.stream-left {
+  width: 546px;
+}
+
+.stream-text {
+  font-family: var(--Font_Roboto);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.kids-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 72px 90px;
+  gap: 12px;
+}
+
+h5 {
+  font-family: var(--Font_Roboto);
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 62px;
+  padding-bottom: 16px;
+}
+
+.kids-text {
+  font-family: var(--Font_Roboto);
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.contact_us-section {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 139px;
+  border-bottom: 8px solid #232323;
+}
+
+.contact_us-input {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+h6 {
+  font-family: var(--Font_Roboto);
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 62px;
+  padding-bottom: 30px;
+}
+
+textarea {
+  padding: 16px;
+  height: 122px;
+}
+
+.send-btn {
+  width: 208px;
+  margin: 0 auto;
+  padding: 12px 24px;
+  border-radius: 4px;
+  background-color: var(--Btn-color);
+  color: #fff;
+  border: none;
+}
+.question-section {
+  padding: 72px 0;
+  border-bottom: 8px solid #232323;
+}
+
+.question-text {
+  font-family: var(--Font_Roboto);
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 62px;
+  padding-bottom: 24px;
+}
+
+.question-section div {
+  color: #fff;
+  border: none;
+  max-width: 1104px;
+}
+.accordion {
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+  border: 1px solid #444;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.accordion-item {
+  border: none;
+  padding-bottom: 8px;
+  background-color: #000;
+}
+.accordion-item:last-child {
+  border: none;
+}
+.accordion-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
+
+  background-color: #222;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.accordion-header:hover {
+  background-color: #444;
+}
+.accordion-header span {
+  font-size: 20px;
+  transition: transform 0.3s;
+}
+.accordion-header span.rotate {
+  transform: rotate(45deg);
+}
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  padding: 0 15px;
+  background-color: #555;
+  opacity: 0.8;
+  transition: max-height 0.3s ease, padding 0.3s ease, opacity 0.3s ease;
+}
+.accordion-content.open {
+  max-height: 200px;
+  padding: 15px;
+  opacity: 1;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  gap: 40px;
+  margin: 72px 168px;
+}
+
+.footer nav {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 600px;
+}
+
+.footer nav a {
+  color: #b3b3b3;
+  text-decoration: underline;
+  font-family: var(--Font_Roboto);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+}
+
+.footer nav a:hover{
+  color: var(--Cards-bg-color);
+}
+
