--- a/Global/variable.css
+++ b/Global/variable.css
@@ -28,6 +28,7 @@
   --TEXT-color_5: #1e1e1e;
   --TEXT-color_6: #000000;
   --TEXT-color_7: #2c2c2c00;
+  --TEXT-color_8: #1d1d1d;
   --Input-text-color: #475069;
   --ErrorInfo-text-color: #ebeef5;
   --Client-text-color: #8e95a9;
