--- a/Styles/Client/home.css
+++ b/Styles/Client/home.css
@@ -205,6 +205,8 @@ p {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  opacity: 0.8;
+  transition: opacity 0.3s ease;
 }
 
 .slide-1 {
