--- a/Styles/Client/404.css
+++ b/Styles/Client/404.css
@@ -1,2 +1,2 @@
-@import url("/Global/global.css");
+@import url("../../Global/global.css");
 @import url("../Responsive/Client/404-responsive.css");
