--- a/Styles/Admin/comments.css
+++ b/Styles/Admin/comments.css
@@ -1,9 +1,9 @@
-@import url("/Global/global.css");
-@import url("/Global/reset.css");
-@import url("/Global/fonts.css");
-@import url("/Global/variable.css");
+@import url("../../Global/global.css");
+@import url("../../Global/reset.css");
+@import url("../../Global/fonts.css");
+@import url("../../Global/variable.css");
 @import url("../Responsive/Admin/categories-responsive.css");
-@import url("/Global/bootstrap.css");
+@import url("../../Global/bootstrap.css");
 
 body {
   display: flex;
