--- a/Styles/Admin/dashboard.css
+++ b/Styles/Admin/dashboard.css
@@ -1,7 +1,7 @@
-@import url("/Global/global.css");
-@import url("/Global/reset.css");
-@import url("/Global/font.css");
-@import url("/Global/variable.css");
+@import url("../../Global/global.css");
+@import url("../../Global/reset.css");
+@import url("../../Global/font.css");
+@import url("../../Global/variable.css");
 @import url("../Responsive/Admin/dashboard-responsive.css");
 
 body {
