--- a/Styles/Admin/login.css
+++ b/Styles/Admin/login.css
@@ -1,8 +1,8 @@
-@import url("/Global/global.css");
-@import url("/Global/reset.css");
-@import url("/Global/font.css");
-@import url("/Global/variable.css");
-@import url("/Global/bootstrap.css");
+@import url("../../Global/global.css");
+@import url("../../Global/reset.css");
+@import url("../../Global/font.css");
+@import url("../../Global/variable.css");
+@import url("../../Global/bootstrap.css");
 @import url("../Responsive/Admin/login-responsive.css");
 
 body {
