--- a/Styles/Client/account.css
+++ b/Styles/Client/account.css
@@ -1,2 +1,2 @@
-@import url("/Global/global.css");
+@import url("../../Global/global.css");
 @import url("../Responsive/Client/account-responsive.css");
