--- a/Styles/Client/details.css
+++ b/Styles/Client/details.css
@@ -1,2 +1,2 @@
-@import url("/Global/global.css");
+@import url("../../Global/global.css");
 @import url("../Responsive/Client/details-responsive.css");
