--- a/Styles/Client/favorite.css
+++ b/Styles/Client/favorite.css
@@ -1,2 +1,2 @@
-@import url("/Global/global.css");
+@import url("../../Global/global.css");
 @import url("../Responsive/Client/favorite-responsive.css");
