--- a/Styles/Client/search.css
+++ b/Styles/Client/search.css
@@ -1,2 +1,2 @@
-@import url("/Global/global.css");
+@import url("../../Global/global.css");
 @import url("../Responsive/Client/search-responsive.css");
