--- a/Styles/Admin/comments.css
+++ b/Styles/Admin/comments.css
@@ -246,8 +246,11 @@ th:nth-child(5) {
 }
 td,
 th:nth-child(6) {
-  padding-left: 15px;
-  width: 60px;
+  width: 30px;
+}
+td,
+th:nth-child(6) {
+  width: 30px;
 }
 
 .button {
@@ -281,7 +284,7 @@ th:nth-child(6) {
   background-color: #171616;
   padding: 30px;
   border-radius: 12px;
-  width: 400px;
+  width: 450px;
   max-width: 90%;
   text-align: center;
   position: relative;
@@ -299,12 +302,12 @@ th:nth-child(6) {
 /* Modal Butonlar */
 .modal-buttons {
   display: flex;
-  justify-content: space-around;
-  gap: 10px;
+  justify-content: center;
+  gap: 40px;
 }
 
 .modal-btn {
-  padding: 10px 20px;
+  padding: 10px 40px;
   border: none;
   border-radius: 8px;
   font-size: 14px;
