--- a/Styles/Admin/movies.css
+++ b/Styles/Admin/movies.css
@@ -112,7 +112,6 @@ body {
   color: var(--Btn-color);
 }
 
-/* test */
 .right {
   width: 100%;
   background-color: var(--Modal-color);
@@ -166,7 +165,6 @@ body {
   color: var(--Text-color_3);
 }
 
-/* table */
 .table-div {
   margin: 94px 75px 0px 24px;
 }
@@ -240,9 +238,9 @@ th {
 
 .img-icon {
   display: inline-block;
-  vertical-align: middle; /* Iconları metinle hizalar */
-  width: 18px; /* Icon boyutu */
-  height: 18px; /* Icon boyutu */
+  vertical-align: middle;
+  width: 18px;
+  height: 18px;
   cursor: pointer;
 }
 
@@ -276,8 +274,6 @@ th {
   background-color: var(--Cards-bg-color);
   transition: background-color 0.3s;
 }
-
-/* modal */
 
 .modal {
   position: fixed;
@@ -400,19 +396,17 @@ textarea.error::placeholder {
   color: red;
 }
 
-/* modal */
 .modal-content-2 {
   background-color: #171616;
   padding: 30px;
   border-radius: 12px;
-  width: 400px;
+  width: 450px;
   max-width: 90%;
   text-align: center;
   position: relative;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Modal Mesaj */
 .comment-wrapper2 {
   margin-bottom: 20px;
   font-size: 16px;
@@ -420,7 +414,6 @@ textarea.error::placeholder {
   line-height: 1.5;
 }
 
-/* Modal Butonlar */
 .modal-buttons {
   display: flex;
   justify-content: space-around;
@@ -428,7 +421,7 @@ textarea.error::placeholder {
 }
 
 .modal-btn {
-  padding: 10px 20px;
+  padding: 10px 40px;
   border: none;
   border-radius: 8px;
   font-size: 14px;
@@ -454,7 +447,6 @@ textarea.error::placeholder {
   background-color: #5a5a5a;
 }
 
-/* Modal */
 .modal-remove {
   display: flex;
   justify-content: center;
