--- a/Styles/Client/home.css
+++ b/Styles/Client/home.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   height: 100vh;
   margin: 0;
+  position: relative;
   overflow: hidden;
   font-family: Arial, sans-serif;
   background-color: var(--TEXT-color_8);
@@ -17,6 +18,9 @@ body {
 
 .left {
   display: flex;
+  position: absolute;
+  z-index: 999;
+  left: 0;
   flex-direction: column;
   align-items: center;
   width: 56px;
@@ -251,6 +255,7 @@ p {
 
 .category-section {
   color: white;
+  padding-left: 56px;
 }
 
 .category-card {
@@ -363,6 +368,7 @@ p {
   font-size: 35px;
   font-weight: 500;
   margin: 0;
+  margin-left: 55px;
 }
 
 .direction-icon {
@@ -377,6 +383,7 @@ p {
 .content-container {
   display: flex;
   flex-wrap: wrap;
+  padding-left: 56px;
 }
 
 .content-card {
