--- a/Styles/Admin/actors.css
+++ b/Styles/Admin/actors.css
@@ -171,7 +171,7 @@ body {
 }
 
 table {
-  width: 374px;
+  width: 40%;
   border-collapse: collapse;
   margin: 20px 0;
   background-color: #ffffff;
@@ -188,16 +188,19 @@ table {
 
 th,
 td {
-  width: 48px;
+  font-family: var(--Font_Nunito_Sans);
+  font-size: 14px;
+  vertical-align: middle;
+  font-weight: 400;
+  line-height: 16.1px;
+  letter-spacing: 0.01em;
   text-align: center;
-}
-
-td {
-  padding: 10px;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  height: 48px;
 }
 
 th {
-  padding: 16px;
   background-color: var(--TEXT-color_5);
   color: #ffffff;
 }
@@ -212,18 +215,30 @@ td img {
 td:first-child {
   align-content: center;
   text-align: center;
-  width: 54px;
+  width: 94px;
 }
 
 td,
 th:nth-child(2) {
   align-content: center;
   text-align: center;
-  width: 200px;
+  width: 150px;
 }
 
 td,
 th:nth-child(3) {
+  align-content: center;
+  text-align: center;
+  width: 200px;
+}
+td,
+th:nth-child(4) {
+  align-content: center;
+  text-align: center;
+  width: 80px;
+}
+td,
+th:nth-child(5) {
   align-content: center;
   text-align: center;
   width: 80px;
@@ -368,19 +383,17 @@ input[type="text"].error {
   transition: background-color 0.3s ease;
 }
 
-/* modal */
 .modal-content-2 {
   background-color: #171616;
   padding: 30px;
   border-radius: 12px;
-  width: 400px;
+  width: 450px;
   max-width: 90%;
   text-align: center;
   position: relative;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Modal Mesaj */
 .comment-wrapper2 {
   margin-bottom: 20px;
   font-size: 16px;
@@ -388,7 +401,6 @@ input[type="text"].error {
   line-height: 1.5;
 }
 
-/* Modal Butonlar */
 .modal-buttons {
   display: flex;
   justify-content: space-around;
@@ -396,7 +408,7 @@ input[type="text"].error {
 }
 
 .modal-btn {
-  padding: 10px 20px;
+  padding: 10px 40px;
   border: none;
   border-radius: 8px;
   font-size: 14px;
