--- a/Styles/Admin/contactus.css
+++ b/Styles/Admin/contactus.css
@@ -188,12 +188,19 @@ table {
 
 th,
 td {
-  width: 48px;
+  font-family: var(--Font_Nunito_Sans);
+  font-size: 14px;
+  vertical-align: middle;
+  font-weight: 400;
+  line-height: 16.1px;
+  letter-spacing: 0.01em;
   text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  height: 48px;
 }
 
 td {
-  padding: 10px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -201,7 +208,6 @@ td {
 }
 
 th {
-  padding: 16px;
   background-color: var(--TEXT-color_5);
   color: #ffffff;
 }
@@ -230,19 +236,24 @@ td,
 th:nth-child(3) {
   align-content: center;
   text-align: center;
-  width: 200px;
+  width: 100px;
 }
 td,
 th:nth-child(4) {
   align-content: center;
   text-align: center;
-  width: 300px;
+  width: 270px;
 }
 td,
 th:nth-child(5) {
   align-content: center;
   text-align: center;
-  width: 60px;
+  width: 45px;
+}
+th:nth-child(6) {
+  align-content: center;
+  text-align: center;
+  width: 45px;
 }
 
 .button {
