--- a/Styles/Admin/movies.css
+++ b/Styles/Admin/movies.css
@@ -186,18 +186,38 @@ td {
   text-overflow: ellipsis;
   text-align: center;
   vertical-align: middle;
-  padding: 4px;
+}
+
+th,
+td {
+  font-family: var(--Font_Nunito_Sans);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.1px;
+  letter-spacing: 0.01em;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  height: 48px;
+}
+
+.th-border {
+  border-radius: 8px 0px 0px 0px;
+}
+
+.th-border2 {
+  border-radius: 0px 8px 0px 0px;
 }
 
 td:first-child {
   text-align: center;
-  width: 64px;
+  width: 70px;
 }
 
 td,
 th:nth-child(2) {
   text-align: center;
-  width: 50px;
+  width: 4%;
 }
 
 td,
@@ -217,23 +237,12 @@ th:nth-child(5) {
 }
 td,
 th:nth-child(6) {
-  padding-left: 15px;
   width: 100px;
 }
 
-.img-icon1 {
-  margin-left: 10px;
-}
 th {
   background-color: var(--TEXT-color_5);
   color: #ffffff;
-}
-
-.movie-title {
-  display: block;
-  margin: 0 auto;
-  max-width: 50px;
-  height: auto;
 }
 
 .img-icon {
@@ -242,13 +251,6 @@ th {
   width: 18px;
   height: 18px;
   cursor: pointer;
-}
-
-.movie-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
 }
 
 .button {
@@ -458,4 +460,28 @@ textarea.error::placeholder {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
+}
+
+.custom-select {
+  appearance: none;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23888888" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>')
+    no-repeat right 10px center;
+  background-size: 16px;
+  border-color: #475069;
+  color: #475069;
+  padding-right: 30px;
+  border-radius: 4px;
+  box-shadow: none;
+}
+
+.custom-select:focus {
+  outline: none;
+  border-color: #475069;
+  color: #475069;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.custom-select option:checked {
+  background-color: transparent;
 }
