--- a/Styles/Admin/users.css
+++ b/Styles/Admin/users.css
@@ -289,35 +289,50 @@ body {
   transition: 0.5s;
 }
 
-/* table */
 .table-div {
   margin: 94px 75px 0px 24px;
 }
 
 table {
-  width: 100%;
+  width: 70%;
   border-collapse: collapse;
-  margin: 20px 0;
   background-color: #ffffff;
   color: #000000;
   border-radius: 10px;
+  text-align: center;
+}
+
+th,
+td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+  vertical-align: middle;
+}
+
+th,
+td {
+  font-family: var(--Font_Nunito_Sans);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.1px;
+  letter-spacing: 0.01em;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  height: 48px;
 }
 
 .th-border {
   border-radius: 8px 0px 0px 0px;
 }
+
 .th-border2 {
   border-radius: 0px 8px 0px 0px;
 }
 
-th,
-td {
-  width: 48px;
-  text-align: center;
-}
-
 th {
-  padding: 16px;
   background-color: var(--TEXT-color_5);
   color: #ffffff;
 }
@@ -332,35 +347,28 @@ td img {
 td:first-child {
   align-content: center;
   text-align: center;
-  width: 54px;
+  width: 94px;
 }
 
 td,
 th:nth-child(2) {
   align-content: center;
   text-align: center;
-  width: 200px;
+  width: 150px;
 }
 
 td,
 th:nth-child(3) {
   align-content: center;
   text-align: center;
-  width: 426px;
+  width: 200px;
 }
 
 td,
 th:nth-child(4) {
   align-content: center;
   text-align: center;
-  width: 260px;
-}
-
-td,
-th:nth-child(5) {
-  align-content: center;
-  text-align: center;
-  width: 148px;
+  width: 200px;
 }
 
 .movie-title {
