--- a/Styles/Client/favorite.css
+++ b/Styles/Client/favorite.css
@@ -1,2 +1,145 @@
 @import url("../../Global/global.css");
 @import url("../Responsive/Client/favorite-responsive.css");
+
+.client-login {
+  display: flex;
+  gap: 10px;
+}
+
+.main-logo {
+  width: 56px;
+  height: 56px;
+}
+
+/* sidebar */
+.side-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  /* height: 1000px; */
+  width: 56px;
+
+  margin-top: 8px;
+  padding-top: 40px;
+  backdrop-filter: blur(24px);
+
+  gap: 64px;
+  /* background-color: var(--SideBar-color); */
+}
+
+.logo_links {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+  padding: 0 12px;
+}
+
+.logos {
+  filter: brightness(1.8);
+  scroll-behavior: smooth;
+}
+
+.favorite-icon {
+  fill: var(--Link-hover-color);
+}
+
+.section-container {
+  color: white;
+  margin-bottom: 188px;
+}
+
+.section-header {
+  display: flex;
+  /* margin: 60px 0px 26px 56px; */
+
+  align-items: center;
+  color: #ffffff;
+  font-family: var(--Font_Roboto);
+}
+
+.section-title {
+  font-size: 35px;
+  font-weight: 500;
+  margin: 0;
+  padding-top: 157px;
+}
+
+.content-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 48px;
+}
+
+.content-card {
+  background: #1d1d1d;
+  overflow: hidden;
+  width: 504px;
+  height: 736px;
+  position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-card:hover {
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
+}
+
+.content-card:hover .content-image {
+  opacity: 0.5;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.content-card:hover .content-info {
+  transform: translateY(-20%);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.direction-icon {
+  margin-top: 157px;
+  margin-left: 20px;
+  width: 12px;
+  height: 12px;
+  border-right: 3.5px solid #ffffff;
+  border-top: 3.5px solid #ffffff;
+  transform: rotate(45deg);
+}
+
+.content-image {
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.3s ease;
+}
+
+.content-info {
+  padding: 24px;
+  text-align: left;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transition: transform 0.3s ease;
+}
+
+.content-category {
+  display: inline-block;
+  background: #1d1d1d80;
+  padding: 4px 8px;
+  border-radius: 0px 8px 0px 8px;
+  color: var(--Link-hover-color);
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.content-title {
+  margin: 0;
+
+  font-size: 35px;
+  font-weight: 500;
+  line-height: 40px;
+  /* padding-top: 16px; */
+}
