account page completed

--- a/Styles/Client/account.css
+++ b/Styles/Client/account.css
@@ -1,2 +1,150 @@
 @import url("../../Global/global.css");
 @import url("../Responsive/Client/account-responsive.css");
+
+.account-body {
+  display: flex;
+}
+.main-logo {
+  width: 56px;
+  height: 56px;
+}
+
+/* sidebar */
+.side-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 56px;
+  /* height: 670px; */
+  margin-left: 20px;
+  padding-top: 40px;
+  backdrop-filter: blur(24px);
+  box-shadow: 0px 40px 40px 8px #00000029;
+  gap: 64px;
+  /* background-color: var(--SideBar-color); */
+}
+
+.logo_links {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+  padding: 0 12px;
+}
+
+.logos {
+  filter: brightness(1.8);
+  scroll-behavior: smooth;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease, filter 0.3s ease;
+  cursor: pointer;
+}
+
+.icon:hover {
+  color: #1d1d1d;
+  transform: scale(1.2);
+  filter: brightness(2);
+  z-index: 20;
+}
+
+.icon-img {
+  filter: brightness(0) saturate(100%) invert(48%) sepia(93%) saturate(696%)
+    hue-rotate(160deg) brightness(101%) contrast(102%);
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.icon:hover .icon-img {
+  transform: scale(1.2);
+  filter: brightness(0) saturate(100%) invert(48%) sepia(93%) saturate(696%)
+    hue-rotate(160deg) brightness(101%) contrast(102%);
+}
+
+
+.right-part{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 160px;
+    padding-bottom: 284px;
+}
+
+
+form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form-group {
+    display: flex;
+    align-items: center;
+  
+    background-color: var(--Admin-sidebar-color);
+  
+    border: 1px solid var(--Border-color_1);
+    border-radius: 12px;
+  
+    width: 547px;
+    margin-bottom: 16px;
+  }
+  .form-group img {
+    margin: 20px 16px;
+  }
+  
+  .form-group input {
+    flex: 1;
+    background: none;
+    border: none;
+    outline: none;
+    color: var(--Input-text-color);
+    font-size: 16px;
+    font-family: var(--Font_Poppins);
+  }
+  
+  .register-btn {
+    padding: 16px 32px 16px 32px;
+    gap: 8px;
+    border-radius: 12px;
+    opacity: 0px;
+    background: var(--Btn-color);
+    border: 2px solid var(--SideBar-color);
+    font-family: var(--Font_Poppins);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #ffffff;
+    margin-top: 24px;
+  }
+  
+  .form-group:hover {
+    border-color: var(--Btn-color);
+    transition: border-color 0.5s;
+  }
+  
+  .register-btn:hover {
+    background: var(--Cards-bg-color);
+    border-color: var(--Cards-bg-color);
+    color: var(--Text-color_1);
+    transition: 0.5s;
+  }
+  
+  nav{
+    display: flex;
+    justify-content: flex-start;
+    
+  }
+  a{
+    color: var(--Link-color);
+  }
+
+#email::placeholder{
+color: #fff;
+}
