--- a/Styles/Admin/contactus.css
+++ b/Styles/Admin/contactus.css
@@ -94,7 +94,7 @@ body {
   margin-top: auto;
   display: flex;
   align-items: center;
-  margin-left: 48px;
+  padding: 10px 48px;
   margin-bottom: 44px;
   cursor: pointer;
   border-color: red;
